--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="/client/src/App.js"></script>
+    <script src="./App.js"></script>
 </body>
 </html>
